調整 Dockerfile 與 pom.xml